--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -138,13 +138,17 @@
           <img class="img-polaroid" src="img/480x300.gif">
         </div>
         <div class="span5 copy">
-          <p>Life Better Task</p>
+          <p>Life Better Task<br/> A task management system aimed to
+            offer great functionality with simple user experience.</p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>Life Better Cal</p>
+          <p>Life Better Cal<br/> A Calendar app integrates with Life
+            Better Goal, Life Better Task, Life Better Timer, Life
+            Better @10000 etc.
+          </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="img/480x300.gif">
@@ -156,16 +160,31 @@
           <img class="img-polaroid" src="img/480x300.gif">
         </div>
         <div class="span5 copy">
-          <p>Life Better Timer</p>
+          <p>Life Better Goal<br/> Track all life long term goal, 5 -
+            10 year middle term goal, 1 - 3 year goal and annuary
+            goal, monthly, weekly goal etc.
+          </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>Life Better @10000</p>
+          <p>Life Better @10000<br/>Track all the times used to become
+          expert of a field.</p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="img/480x300.gif">
+        </div>
+      </div>
+
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" src="img/480x300.gif">
+        </div>
+        <div class="span5 copy">
+          <p>Life Better Timer<br/> A timer to track time used in one
+          long term goal.
+          </p>
         </div>
       </div>
 
@@ -205,78 +224,6 @@
                   <div class="accordion-inner">
                     Life time goal, 5 - 10 year goal, 1 year goal,
                     task list, timer and @10000 to track the effects. 
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseThree">
-                    What is Life Better Task?
-                  </a>
-                </div>
-                <div id="collapseThree" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseFour">
-                    What is Life Better Cal?
-                  </a>
-                </div>
-                <div id="collapseFour" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    A Calendar app integrates with Life Better Goal,
-                    Task, @10000 etc.
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseFive">
-                    What is Life Better Goal?
-                  </a>
-                </div>
-                <div id="collapseFive" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    Track all life long term goal, 5 - 10 year middle
-                    term goal, 1 - 3 year goal and annuary goal,
-                    monthly, weekly goal etc.
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseSix">
-                    What is Life Better Timer?
-                  </a>
-                </div>
-                <div id="collapseSix" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    A timer to track time used in one long term goal.
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseSeven">
-                    What is Life Better @10000?
-                  </a>
-                </div>
-                <div id="collapseSeven" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    Track all the times used to become expert of a field.
                   </div>
                 </div>
               </div>
