Update home page content

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -222,8 +222,16 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Life time goal, 5 - 10 year goal, 1 year goal,
-                    task list, timer and @10000 to track the effects. 
+                    Everybody have life time long term goal, 5-10
+                    years long term goal, our 1-3 years middle term
+                    goal, and our short term goal, and we also have to
+                    work on those goals, track our effects, it's
+                    almost not possible to implement all the features
+                    in one app, since that will make the very
+                    complicate and not easy to use. <br/> Our design
+                    principle is trying to make every single app do
+                    the best work on a specify field and integrate
+                    them to make them working together.
                   </div>
                 </div>
               </div>
